--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,141 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.header_wrapper{
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+/* Some common CSS */
+.primary_btn {
+    background-color: #010b55;
+    padding: 20px 43px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 50px;
+    border: none;
+}
+.secondary_btn{
+    border: 1px solid #010b55;
+    padding: 20px 43px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 50px;
+}
+.header_wrapper {
     background-color: rgb(255, 255, 255);
     border-bottom: 1px solid #ddd;
+
 }
-.header_content{
+
+.header_content {
     width: 1100px;
     margin: 0 auto;
 }
-.header_content .navbar{
+
+.header_content .navbar {
     display: flex;
     align-items: center;
 }
-.header_content .navbar ul{
+
+.header_content .navbar ul {
     display: flex;
 }
-.header_content .navbar ul li{
+
+.header_content .navbar ul li {
     margin-right: 30px;
     list-style: none;
 }
-.header_content .navbar ul li a{
+
+.header_content .navbar ul li a {
     text-decoration: none;
-    color: #4a4a4a;
-    font-size: 21px;
+    color: #6a6a6a;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
 }
-.header_content .navbar .logo img{
+
+.header_content .navbar .logo img {
     max-width: 15%;
+}
+
+/* Banner Section CSS */
+.banner_wrapper {
+    background: rgba(229, 84, 115, 0.10);
+}
+
+.banner_content {
+    width: 1100px;
+    margin: 0 auto;
+    align-items: center;
+    display: flex;
+}
+
+.banner_textbtn h3 {
+    color: #272727;
+    font-family: Lato;
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.banner_textbtn p {
+    color: rgba(39, 39, 39, 0.60);
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 25px;
+    margin-top: 20px;
+}
+.banner_textbtn button a {
+    color: #FFF;
+    font-family: Lato;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+   text-decoration: none;
+}
+.banner_image img {
+    max-width: 500px;
+}
+
+.about_wrapper{
+    background-color: #fff;
+}
+.about_content{
+    width: 1100px;
+    margin: 0 auto;
+}
+.about_content h3{
+    font-size: 45px;
+    text-align: center;
+    padding: 130px 0px 50px 0px;
+    color: #3d3d3d;
+}
+.about_content .about_parts{
+    display: flex;
+    align-items: center;
+    padding: 50px;
+}
+.about_img img{
+    max-width: 500px;
+}
+.about_text h4{
+    font-size: 35px;
+    color: #3d3d3d;
+    padding-bottom: 10px;
+    margin-top: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+}
+.about_text p{
+    font-size: 17px;
+    color: #3d3d3d;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 25px;
 }
