--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@ body {
 .about_content h3{
     font-size: 45px;
     text-align: center;
-    padding: 130px 0px 50px 0px;
+    margin-top: 100px;
     color: #3d3d3d;
 }
 .about_content .about_parts{
@@ -138,4 +138,8 @@ body {
     color: #3d3d3d;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 25px;
+}
+.secondary_btn a{
+    text-decoration: none;
+    font-size: 18px;
 }
