--- a/styles/style.css
+++ b/styles/style.css
@@ -265,3 +265,87 @@ body {
     font-weight: 600;
     line-height: 35px;
 }
+
+/* Hot Deal Section */
+.hot_deal_wrapper{
+    border-radius: 8px;
+background: rgba(229, 84, 115, 0.05);
+}
+.hot_deal_content{
+    width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.off_section h3{
+    color: #272727;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+text-align: center;
+}
+.off{
+    color: #E55473;
+}
+.off_section p{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 30px;
+}
+.off_section button{
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+.off_section button a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+/* Insta Section CSS */
+.insta_wrapper{
+    background-color: #fff;
+}
+.insta_content{
+    width: 1100px;
+    margin: 0 auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.insta_content h3{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+margin-bottom: 20px;
+}
+.insta_content p{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+margin-bottom: 50px;
+}
+.insta_image_wrapper{
+    display: flex;
+}
+.insta_image_wrapper .single_img img{
+    max-width: 95%;
+    height: auto;
+}
