--- a/styles/style.css
+++ b/styles/style.css
@@ -349,3 +349,66 @@ margin-bottom: 50px;
     max-width: 95%;
     height: auto;
 }
+
+/* Newlatter Section CSS */
+.newlatter_wrapper{
+    background-color: #fff;
+}
+.newlatter_content{
+    width: 1100px;
+    margin: 0 auto;
+    text-align: center;
+    background-image: url(../asset/Rectangle\ 9.png);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.newlatter_content .main_content{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.newlatter_content .main_content{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.newlatter_content .main_content h3{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+margin-bottom: 10px;
+}
+.newlatter_content .main_content p{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+.newlatter_content .main_content .input_box input{
+    width: 680px;
+    height: 50px;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+}
+.newlatter_content .main_content .input_box button a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+}
+.newlatter_content .main_content .input_box .nl_button{
+    background-color: #010b55;
+    padding: 18px 43px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 10px;
+    border: none;
+}
+
