--- a/styles/style.css
+++ b/styles/style.css
@@ -353,6 +353,7 @@ margin-bottom: 50px;
 /* Newlatter Section CSS */
 .newlatter_wrapper{
     background-color: #fff;
+    padding-bottom: 100px;
 }
 .newlatter_content{
     width: 1100px;
@@ -412,3 +413,49 @@ margin-bottom: 10px;
     border: none;
 }
 
+.footer_wrapper{
+    background: #111010;
+}
+.footer_content{
+    width: 1100px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.footer_content h1{
+    color: #E55473;
+font-family: Lato;
+font-size: 48px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+padding-bottom: 24px;
+}
+.footer_content span{
+    color: #fff;
+font-family: Lato;
+font-size: 48px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+margin-bottom: 30px;
+}
+.footer_content p{
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding-bottom: 18px;
+}
+.footer_content small{
+    color: rgba(255, 255, 255, 0.40);
+font-family: Lato;
+font-size: 16px;
+font-weight: 400;
+line-height: normal;
+padding-top: 20px !important;
+}
