--- a/styles/style.css
+++ b/styles/style.css
@@ -194,9 +194,9 @@ body {
     margin-top: 100px;
 }
 
-.three_items_wrapper .single_item {
-    width: 400px;
-    height: 500px;
+.three_items_wrapper .single_item{
+    width: 300px;
+    height: 400px;
     padding: 30px;
     margin: 10px;
 }
@@ -207,13 +207,14 @@ body {
 }
 
 .three_items_wrapper .single_bg1 img {
-    height: 400px;
+    height: 290px;
+    margin-top: 79px;
 }
 
 .three_items_wrapper .single_bg2 img {
-    height: 400px;
+    height: 280px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 60px;
 }
 
 .three_items_wrapper .single_bg2 {
@@ -226,13 +227,30 @@ body {
     background: rgba(71, 125, 17, 0.15);
 }
 
+.three_items_wrapper .single_bg3 img{
+    max-width: 229px;
+    margin-top: 25px;
+}
+
 .only_text_area {
     display: flex;
     justify-content: space-around;
 }
 
-.only_text_area .two {
-    padding-left: 200px;
+.only_text_area .one a {
+    margin-left: -80px;
+    position: absolute;
+    padding-top: 20px;
+}
+.only_text_area .two a {
+    margin-left: -90px;
+    position: absolute;
+    padding-top: 20px;
+}
+.only_text_area .three a {
+    margin-left: -100px;
+    position: absolute;
+    padding-top: 20px;
 }
 
 .only_text_area a {
@@ -243,7 +261,7 @@ body {
 /* Feature Section */
 .feature_wrapper {
     background-color: #fff;
-    margin-top: 70px;
+    margin-top: 140px;
     margin-bottom: 70px;
 }
 
@@ -365,8 +383,8 @@ margin-bottom: 50px;
     background-repeat: no-repeat;
 }
 .newlatter_content .main_content{
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 .newlatter_content .main_content{
     padding-top: 100px;
